[project]
name = "fastapi-core-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Lorena Araújo",email = "lorena.araujo1@faculdadegran.edu.br"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.138.0,<0.139.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "pydantic (>=2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false


[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=26.5.1,<27.0.0)",
    "mypy (>=2.1.0,<3.0.0)"
]
